--- a/styling.css
+++ b/styling.css
@@ -1,14 +1,23 @@
 h1{
-    background-color: black;
+    background-color: palevioletred;
     color: white;
+    padding: 20px;
+    padding-left: 40px;
+    border-radius: 20px;
+    margin: 20px;
+    width: 180px;
+
+
 }
 
 h2{
-    background-color: black;
+    background-color:palevioletred;
     color:white;
     height: 40px;
     width: 250px;
     font-size: 30px;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 p{
@@ -58,3 +67,19 @@ p{
 .para{
     color: black;
 }
+     
+.card{
+    height: 70px;
+    width: 90px;
+    border-radius: 15px;
+     padding: 20px;
+     border-radius: 15px;
+     margin: 20px;
+
+}
+
+h3{
+    font-size: 40px;
+    border: salmon;
+}
+
